ADD: Kata
Se agrego kata 7 y 8